[package]
name = "rust-wasm-pong"
version = "0.0.1"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
good-web-game = { git = "https://github.com/not-fl3/good-web-game" }
lazy_static = "*"
stdweb = "0.4.14"

[profile.release]
lto = true
opt-level = 's' # optimize for size
